fix padding bottom mobile and alignment on tablet

--- a/src/components/FormFields/ItemAvailabilityForm/ItemAvailabilityForm.scss
+++ b/src/components/FormFields/ItemAvailabilityForm/ItemAvailabilityForm.scss
@@ -3,133 +3,126 @@
 @use "../../../styles/partials/__utils" as *;
 
 @include mobile {
-.item-availability-form {
+  .item-availability-form {
     width: 85%;
     padding: $padding-s;
-    padding-bottom: 15.875rem;
     border-bottom: 1px solid $color-secondary-cloud;
-  &__title {
-    margin-bottom: 2rem;
-  }
-
-  &__group {
-    margin: 1rem 0;
-  }
-
-  &__label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-   
-
-  }
- 
-&__status-button  {
-
-  margin-right: 3rem;
- 
-}
-&__select {
-  appearance: none;
- background: url("../../../assets/Icons/arrow_drop_down-24px.svg") no-repeat right 0.75em center;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-  width: 96%;
-  padding: $padding-xxs $padding-xs;
-  font-size: 13px;
-  line-height: 20px;
-  font-family: "Titillium Regular";
-  color: $color-primary-is-black;
- 
-    border-radius: 1.25rem;   //border styles
-    border: 1px solid $color-secondary-cloud;
-    &:focus {
-      border-color: $color-primary-is-indigo;
-      outline: none;
-    }
-}
-  &__input {
-
-    margin-top: 0.5rem;
-    margin-bottom: 1rem;
-    width: 88%;
-    padding: $padding-xxs $padding-xs;
-    font-size: 13px;
-    line-height: 20px;
-    font-family: "Titillium Regular";
-    color: $color-primary-is-black;
-
-    //border styles
-    border-radius: 1.25rem;
-    border: 1px solid $color-secondary-cloud;
-    &:focus {
-      border-color: $color-primary-is-indigo;
-      outline: none;
+    &__title {
+      margin-bottom: 2rem;
     }
 
-    &.active {
-      border: 1px solid $color-primary-is-indigo;
-      outline: none;
+    &__group {
+      margin: 1rem 0;
     }
 
-    &.error {
-      border: 1px solid $color-support-red;
-      outline: none;
+    &__label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: bold;
     }
-  }
-  .error-message {
-    color: $color-support-red;
-    font-size: 12px;
-  }
 
-  &__form-ctas {
-    width: 100vw;
-    background-color: rgba(247, 248, 249, 0.7);
-    padding: $padding-xs 0;
-    justify-content: center;
-    display: flex;
-    flex-direction: row-reverse;
-
-  }
-
-  &__button-add {
-    margin-left: 0.5rem;
-    margin-right: 1.75rem;
-    width: 10rem;
-    border: none;
-    padding: $padding-xxs $padding-xs;
-    border-radius: 1.25rem;
-    color: $color-primary-white;
-    background-color: $color-primary-is-indigo;
-    .default-label{
-      display: inline;
+    &__status-button {
+      margin-right: 3rem;
     }
-    .tablet-label {
-      display: none;
-    }
-    &:hover {
-      background-color: $color-bg-graphite;
-    }
-  }
+    &__select {
+      appearance: none;
+      background: url("../../../assets/Icons/arrow_drop_down-24px.svg")
+        no-repeat right 0.75em center;
+      margin-top: 0.5rem;
+      margin-bottom: 1rem;
+      width: 96%;
+      padding: $padding-xxs $padding-xs;
+      font-size: 13px;
+      line-height: 20px;
+      font-family: "Titillium Regular";
+      color: $color-primary-is-black;
 
-  &__button-cancel {
-    margin-left: 1.75rem;
-    margin-right: 0.5rem;
-    width: 10rem;
-    padding: $padding-xxs $padding-xs;
-    border-radius: 1.25rem;
-    border: 1px solid $color-secondary-cloud;
-    color: $color-secondary-slate;
-    background-color: $color-primary-white;
+      border-radius: 1.25rem; //border styles
+      border: 1px solid $color-secondary-cloud;
+      &:focus {
+        border-color: $color-primary-is-indigo;
+        outline: none;
+      }
+    }
+    &__input {
+      margin-top: 0.5rem;
+      margin-bottom: 1rem;
+      width: 88%;
+      padding: $padding-xxs $padding-xs;
+      font-size: 13px;
+      line-height: 20px;
+      font-family: "Titillium Regular";
+      color: $color-primary-is-black;
 
-    &:hover {
-      color: $color-primary-is-indigo;
-      border: 1px solid $color-primary-is-indigo;
+      //border styles
+      border-radius: 1.25rem;
+      border: 1px solid $color-secondary-cloud;
+      &:focus {
+        border-color: $color-primary-is-indigo;
+        outline: none;
+      }
+
+      &.active {
+        border: 1px solid $color-primary-is-indigo;
+        outline: none;
+      }
+
+      &.error {
+        border: 1px solid $color-support-red;
+        outline: none;
+      }
+    }
+    .error-message {
+      color: $color-support-red;
+      font-size: 12px;
+    }
+
+    &__form-ctas {
+      width: 100vw;
+      background-color: rgba(247, 248, 249, 0.7);
+      padding: $padding-xs 0;
+      justify-content: center;
+      display: flex;
+      flex-direction: row-reverse;
+    }
+
+    &__button-add {
+      margin-left: 0.5rem;
+      margin-right: 1.75rem;
+      width: 10rem;
+      border: none;
+      padding: $padding-xxs $padding-xs;
+      border-radius: 1.25rem;
+      color: $color-primary-white;
+      background-color: $color-primary-is-indigo;
+      .default-label {
+        display: inline;
+      }
+      .tablet-label {
+        display: none;
+      }
+      &:hover {
+        background-color: $color-bg-graphite;
+      }
+    }
+
+    &__button-cancel {
+      margin-left: 1.75rem;
+      margin-right: 0.5rem;
+      width: 10rem;
+      padding: $padding-xxs $padding-xs;
+      border-radius: 1.25rem;
+      border: 1px solid $color-secondary-cloud;
+      color: $color-secondary-slate;
+      background-color: $color-primary-white;
+
+      &:hover {
+        color: $color-primary-is-indigo;
+        border: 1px solid $color-primary-is-indigo;
+      }
     }
   }
 }
-}
-
 
 /* -------------------------------------------------------------------------- */
 /*                                Tablet Styles                               */
@@ -143,30 +136,31 @@
     &__form-ctas {
       justify-content: end;
       margin-right: 2rem;
-  }
+    }
     &__button-add {
-      .default-label{
+      .default-label {
         display: none;
       }
       .tablet-label {
         display: inline;
       }
     }
+  }
+}
+
+/* -------------------------------------------------------------------------- */
+/*                                DesktopStyles                               */
+/* -------------------------------------------------------------------------- */
+
+@include desktop {
+  .item-availability-form {
+    &__form-ctas {
+      justify-content: end;
+      margin-right: 18rem;
+    }
+    padding: $padding-m $padding-xl;
+    &__input {
+      width: 92%;
     }
   }
-  
-  /* -------------------------------------------------------------------------- */
-  /*                                DesktopStyles                               */
-  /* -------------------------------------------------------------------------- */
-  
-  @include desktop {
-    .item-availability-form {
-      &__form-ctas {
-        justify-content: end;
-      margin-right: 18rem;}
-      padding: $padding-m $padding-xl;
-      &__input {
-        width: 92%;
-      }
-    }
-  }
+}
